<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tahajjjud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tahajjud"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/witir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/witir"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/rawatib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rawatib"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/dhuha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dhuha"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/istikhorah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/istikhoroh"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/tahiyyatul_masjid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tahiyyatul_masjid"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/syuruk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/syuruq"
        android:textSize="16sp"/>


</LinearLayout>